--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -55,16 +55,18 @@ jobs:
           api-private-key: ${{ secrets.APPCONNECT_API_KEY_PRIVATE }}
           profile-type: IOS_APP_STORE
       - run: security find-identity -v -p codesigning
+      - run: echo ${{ steps.provisioning.outputs.profiles }}
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-      - run: echo ${{ steps.provisioning.outputs.profiles }}
-      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
-#      - run: flutter build ios --no-codesign
-#      - run: |
+#      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
+      - run: flutter build ios --no-codesign
+      - run: |
+          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive
+          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportPath build/myApp.ipa -exportFormat ipa -exportProvisioningProfile "Converter GitHub Actions Dist"
 #          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
 #          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa -allowProvisioningUpdates
-#        working-directory: ios
+        working-directory: ios
 #      - uses: wzieba/Firebase-Distribution-Github-Action@v1
 #        with:
 #          appId: ${{secrets.FIREBASE_IOS_APPID}}
