--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+    - name: Set Xcode Version
+      run: sudo xcode-select -s /Applications/Xcode_12.app/Contents/Developer
       - run: |
           echo "List of applications"
           ls /Applications/
@@ -16,7 +18,7 @@ jobs:
 #          echo "Dump env variables"
 #          set
 #          echo
-      - run: sudo xcode-select -s /Applications/Xcode_12.4.app
+#      - run: sudo xcode-select -s /Applications/Xcode_12.4.app
       - name: Import Codesign Certificate
         id: codesign-cert
         uses: Apple-Actions/import-codesign-certs@v1
@@ -55,14 +57,13 @@ jobs:
           api-private-key: ${{ secrets.APPCONNECT_API_KEY_PRIVATE }}
           profile-type: IOS_APP_STORE
       - run: security find-identity -v -p codesigning
-      - run: echo ${{ steps.provisioning.outputs.profiles }}
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
 #      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
       - run: flutter build ios --no-codesign
       - run: |
-          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive
+          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -exportProvisioningProfile "iOS Team Store Provisioning Profile: maxeem.america.flutter.converter"
           xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportPath build/myApp.ipa -exportFormat ipa -exportProvisioningProfile "iOS Team Store Provisioning Profile: maxeem.america.flutter.converter"
 #          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
 #          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa -allowProvisioningUpdates
