--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -6,9 +6,10 @@
     <string>KCKD42NRF8</string>
     <key>method</key>
     <string>app-store</string>
+    <key>signingStyle</key>
     <string>manual</string>
     <key>signingCertificate</key>
-    <string>iPhone Distribution: Maksim Shemetov</string>
+    <string>Maksim Shemetov</string>
     <key>provisioningProfiles</key>
     <dict>
      <key>maxeem.america.flutter.converter</key>
