--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -58,7 +58,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-@      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
+#      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
       - run: flutter build ios --no-codesign
       - run: |    
           xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
