--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -2,18 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>signingStyle</key>
-    <string>manual</string>
+    <key>destination</key>
+    <string>export</string>
     <key>teamID</key>
     <string>KCKD42NRF8</string>
     <key>method</key>
     <string>app-store</string>
     <key>signingCertificate</key>
-    <string>iPhone Distribution: Maksim Shemetov</string>
+    <string>iPhone Distribution: Maksim Shemetov (KCKD42NRF8)</string>
     <key>provisioningProfiles</key>
     <dict>
-     <key>maxeem.america.flutter.converter</key>
-     <string>245cc7d2-21de-40f0-bfbe-9db6793b986e</string>
+      <key>maxeem.america.flutter.converter</key>
+      <string>Converter - distr</string>
     </dict>
+    <key>signingStyle</key>
+    <string>manual</string>
 </dict>
 </plist>
