--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -8,62 +8,46 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
-#      - run: |
-#          echo "List of applications"
-#          ls /Applications/
-#      - run: |
-#          echo "Dump env variables"
-#          set
-#          echo
-#      - run: sudo xcode-select -s /Applications/Xcode_12.4.app
-      - name: Import Codesign Certificate
-        id: codesign-cert
-        uses: Apple-Actions/import-codesign-certs@v1
-        with:
-          p12-file-base64: ${{ secrets.CERTIFICATIONS_P12_BASE64 }}
-          p12-password: ${{ secrets.P12_PASSWORD }}
-      - name: Generate App Store Connect API Token
-        id: app-store-api-token
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Install the Apple certificate and provisioning profile
         env:
-          ISSUER_ID: 1bbfc512-3fd2-4926-a061-493018bf22a5
-          KEY_ID: 223GCBQ6Y3
-          AUTH_KEY: ${{ secrets.APPCONNECT_API_KEY_PRIVATE }}
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.CERTIFICATIONS_P12_BASE64 }}
+          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
-          pip3 install cryptography
-          pip3 install pyjwt
-          exp=$(date -v +20M +%s)
-          iss=$(date -v -1M +%s)
-          jwt=$(python3 -c "import jwt; print(jwt.encode({'aud':'appstoreconnect-v1','iss':'$ISSUER_ID','exp':$exp,'iat':$iss},'''$AUTH_KEY''',algorithm='ES256', headers={'kid': '$KEY_ID'}))") 
-          echo "::add-mask::$jwt"
-          echo "::set-output name=appStoreToken::$jwt"
-      - name: Prime App Store Connect API
-        env:
-          JWT: ${{ steps.app-store-api-token.outputs.appStoreToken }}
-        uses: nick-invision/retry@v1.0.0
-        with:
-          timeout_minutes: 1
-          max_attempts: 30
-          command: 'curl --header "Authorization: Bearer $JWT" -s -o /dev/null -w "%{http_code}" --fail https://api.appstoreconnect.apple.com/v1/bundleIds'
-      - name: Import Provisioning Profile
-        id: provisionining
-        uses: Apple-Actions/download-provisioning-profiles@v1
-        with:
-          bundle-id: maxeem.america.flutter.converter
-          issuer-id: ${{ secrets.APPCONNECT_API_ISSUER }}
-          api-key-id: 223GCBQ6Y3
-          api-private-key: ${{ secrets.APPCONNECT_API_KEY_PRIVATE }}
-          profile-type: IOS_APP_STORE
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p $KEYCHAIN_PASSWORD $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P $P12_PASSWORD -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
       - run: security find-identity -v -p codesigning
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-#      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
-      - run: flutter build ios --no-codesign
-      - run: |    
-          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
-          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa
-        working-directory: ios
+      - run: flutter build ipa -v --export-options-plist=ios/ExportOptions.plist
+#      - run: flutter build ios --no-codesign
+#      - run: |    
+#          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive
+#          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa
+#        working-directory: ios
 #      - uses: wzieba/Firebase-Distribution-Github-Action@v1
 #        with:
 #          appId: ${{secrets.FIREBASE_IOS_APPID}}
