--- a/.github/workflows/ios-distribution.yml
+++ b/.github/workflows/ios-distribution.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-#      - run: |
-#          echo "List of applications"
-#          ls /Applications/
+      - run: |
+          echo "List of applications"
+          ls /Applications/
 #      - run: |
 #          echo "Dump env variables"
 #          set
@@ -58,12 +58,12 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
-#      - run: flutter build ipa --export-options-plist=ios/ExportOptions.plist
-      - run: flutter build ios --no-codesign
-      - run: |    
-          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive -allowProvisioningUpdates
-          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa
-        working-directory: ios
+      - run: flutter build ipa -v --export-options-plist=ios/ExportOptions.plist
+#      - run: flutter build ios --no-codesign
+#      - run: |    
+#          xcodebuild -workspace Runner.xcworkspace -scheme Runner -sdk iphoneos -configuration Release archive -archivePath build/Runner.xcarchive
+#          xcodebuild -exportArchive -archivePath build/Runner.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath build/Runner.ipa
+#        working-directory: ios
 #      - uses: wzieba/Firebase-Distribution-Github-Action@v1
 #        with:
 #          appId: ${{secrets.FIREBASE_IOS_APPID}}
